--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular-devkit/build-angular": "^16.0.0-rc.0",
     "@angular/cli": "~16.0.0-rc.0",
     "@angular/compiler-cli": "^16.0.0-rc.0",
+    "prettier": "2.8.4",
     "typescript": "~4.9.4"
   }
 }
