--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -24,8 +25,17 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.0-rc.0",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~16.0.0-rc.0",
     "@angular/compiler-cli": "^16.0.0-rc.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "@playwright/test": "^1.32.1",
+    "eslint": "^8.33.0",
     "prettier": "2.8.4",
     "typescript": "~4.9.4"
   }
