--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest ./src",
     "lint": "ng lint"
   },
   "private": true,
@@ -32,11 +32,17 @@
     "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~16.0.0-rc.0",
     "@angular/compiler-cli": "^16.0.0-rc.0",
+    "@playwright/test": "^1.32.1",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
-    "@playwright/test": "^1.32.1",
     "eslint": "^8.33.0",
+    "jest": "^29.5.0",
+    "jest-preset-angular": "^13.0.1",
     "prettier": "2.8.4",
     "typescript": "~4.9.4"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupTestFrameworkScriptFile": "<rootDir>/setupJest.ts"
   }
 }
