tests(e2e): adds e2e tests

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "pw:run": "URL=http://localhost:4200 npx playwright test --ui",
+    "pw:run": "URL=http://localhost:4200 npx playwright test",
+    "pw:local": "URL=http://localhost:4200 npx playwright test --ui",
     "pw:run-dev": "URL=https://pres-dev.ccr.cancer.gov npx playwright test",
     "pw:run-test": "URL=https://pres-test.ccr.cancer.gov npx playwright test",
     "test": "jest ./src",
