feat(core): adds v16 support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-v16-base",
-  "version": "1.0.0-rc.2",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -15,36 +15,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0-rc.2",
-    "@angular/common": "^16.0.0-rc.2",
-    "@angular/compiler": "^16.0.0-rc.2",
-    "@angular/core": "^16.0.0-rc.2",
-    "@angular/forms": "^16.0.0-rc.2",
-    "@angular/platform-browser": "^16.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "^16.0.0-rc.2",
-    "@angular/router": "^16.0.0-rc.2",
+    "@angular/animations": "^16.0.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/forms": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/router": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0-rc.1",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "~16.0.0-rc.1",
-    "@angular/compiler-cli": "^16.0.0-rc.2",
-    "@playwright/test": "^1.32.1",
+    "@angular-devkit/build-angular": "^16.0.0",
+    "@angular-eslint/builder": "16.0.1",
+    "@angular-eslint/eslint-plugin": "16.0.1",
+    "@angular-eslint/eslint-plugin-template": "16.0.1",
+    "@angular-eslint/schematics": "16.0.1",
+    "@angular-eslint/template-parser": "16.0.1",
+    "@angular/cli": "~16.0.0",
+    "@angular/compiler-cli": "^16.0.0",
+    "@playwright/test": "^1.33.0",
     "@types/node": "^18.15.13",
-    "@typescript-eslint/eslint-plugin": "5.48.2",
-    "@typescript-eslint/parser": "5.48.2",
-    "eslint": "^8.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
     "jest": "^29.5.0",
     "jest-preset-angular": "^13.0.1",
-    "prettier": "2.8.4",
-    "typescript": "~4.9.4"
+    "prettier": "2.8.8",
+    "typescript": "~5.0.4"
   },
   "jest": {
     "preset": "jest-preset-angular",
