--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pw:local": "URL=http://localhost:4200 npx playwright test --ui",
     "pw:run-dev": "URL=https://pres-dev.ccr.cancer.gov npx playwright test",
     "pw:run-test": "URL=https://pres-test.ccr.cancer.gov npx playwright test",
-    "test": "jest ./src",
+    "test": "ng test --include src/**/*.spec.ts",
     "lint": "ng lint"
   },
   "private": true,
@@ -28,26 +28,23 @@
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.0",
+    "@angular-devkit/build-angular": "^16.1.1",
     "@angular-eslint/builder": "16.0.3",
     "@angular-eslint/eslint-plugin": "16.0.3",
     "@angular-eslint/eslint-plugin-template": "16.0.3",
     "@angular-eslint/schematics": "16.0.3",
     "@angular-eslint/template-parser": "16.0.3",
-    "@angular/cli": "~16.1.0",
-    "@angular/compiler-cli": "^16.1.1",
+    "@angular/cli": "~16.1.1",
+    "@angular/compiler-cli": "^16.1.2",
     "@playwright/test": "^1.35.1",
     "@types/node": "^20.3.1",
+    "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.43.0",
     "jest": "^29.5.0",
-    "jest-preset-angular": "^13.1.1",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.8.8",
     "typescript": "~5.1.3"
-  },
-  "jest": {
-    "preset": "jest-preset-angular",
-    "setupTestFrameworkScriptFile": "<rootDir>/setupJest.ts"
   }
 }
