--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,11 +4,13 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "jest"
     ]
   },
   "include": [
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "playwright"
   ]
 }
