--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "pw:run": "URL=http://localhost:4200 npx playwright test",
     "pw:local": "URL=http://localhost:4200 npx playwright test --ui",
-    "pw:run-dev": "URL=https://pres-dev.ccr.cancer.gov npx playwright test",
-    "pw:run-test": "URL=https://pres-test.ccr.cancer.gov npx playwright test",
+    "pw:debug": "URL=http://localhost:4200 npx playwright test --debug",
     "test": "ng test --include src/**/*.spec.ts",
     "lint": "ng lint"
   },
