--- a/package.json
+++ b/package.json
@@ -1,50 +1,49 @@
 {
-  "name": "angular-v16-base",
-  "version": "1.2.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "pw:run": "URL=http://localhost:4200 npx playwright test",
-    "pw:local": "URL=http://localhost:4200 npx playwright test --ui",
-    "pw:run-dev": "URL=https://pres-dev.ccr.cancer.gov npx playwright test",
-    "pw:run-test": "URL=https://pres-test.ccr.cancer.gov npx playwright test",
-    "test": "ng test --include src/**/*.spec.ts",
-    "lint": "ng lint"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^16.1.1",
-    "@angular/common": "^16.1.1",
-    "@angular/compiler": "^16.1.1",
-    "@angular/core": "^16.1.1",
-    "@angular/forms": "^16.1.1",
-    "@angular/platform-browser": "^16.1.1",
-    "@angular/platform-browser-dynamic": "^16.1.1",
-    "@angular/router": "^16.1.1",
-    "rxjs": "~7.8.1",
-    "tslib": "^2.5.3",
-    "zone.js": "~0.13.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.1",
-    "@angular-eslint/builder": "16.0.3",
-    "@angular-eslint/eslint-plugin": "16.0.3",
-    "@angular-eslint/eslint-plugin-template": "16.0.3",
-    "@angular-eslint/schematics": "16.0.3",
-    "@angular-eslint/template-parser": "16.0.3",
-    "@angular/cli": "~16.1.1",
-    "@angular/compiler-cli": "^16.1.2",
-    "@playwright/test": "^1.35.1",
-    "@types/node": "^20.3.1",
-    "@types/jest": "^29.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
-    "eslint": "^8.43.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "prettier": "2.8.8",
-    "typescript": "~5.1.3"
-  }
+	"name": "angular-v16-base",
+	"version": "1.3.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"pw:run": "URL=http://localhost:4200 npx playwright test",
+		"pw:local": "URL=http://localhost:4200 npx playwright test --ui",
+		"pw:debug": "URL=http://localhost:4200 npx playwright test --debug",
+		"test": "ng test --include src/**/*.spec.ts",
+		"lint": "ng lint"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^16.2.1",
+		"@angular/common": "^16.2.1",
+		"@angular/compiler": "^16.2.1",
+		"@angular/core": "^16.2.1",
+		"@angular/forms": "^16.2.1",
+		"@angular/platform-browser": "^16.2.1",
+		"@angular/platform-browser-dynamic": "^16.2.1",
+		"@angular/router": "^16.2.1",
+		"rxjs": "~7.8.1",
+		"tslib": "^2.5.3",
+		"zone.js": "~0.13.1"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^16.2.0",
+		"@angular-eslint/builder": "16.1.0",
+		"@angular-eslint/eslint-plugin": "16.1.0",
+		"@angular-eslint/eslint-plugin-template": "16.1.0",
+		"@angular-eslint/schematics": "16.1.0",
+		"@angular-eslint/template-parser": "16.1.0",
+		"@angular/cli": "~16.2.0",
+		"@angular/compiler-cli": "^16.2.1",
+		"@playwright/test": "^1.37.0",
+		"@types/node": "^20.5.0",
+		"@types/jest": "^29.5.3",
+		"@typescript-eslint/eslint-plugin": "^6.4.0",
+		"@typescript-eslint/parser": "^6.4.0",
+		"eslint": "^8.47.0",
+		"jest": "^29.6.2",
+		"jest-environment-jsdom": "^29.6.2",
+		"prettier": "3.0.2",
+		"typescript": "~5.1.6"
+	}
 }
