--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-	"name": "angular-v16-base",
-	"version": "1.3.0",
-	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"build": "ng build",
-		"watch": "ng build --watch --configuration development",
-		"pw:run": "URL=http://localhost:4200 npx playwright test",
-		"pw:local": "URL=http://localhost:4200 npx playwright test --ui",
-		"pw:debug": "URL=http://localhost:4200 npx playwright test --debug",
-		"test": "ng test --include src/**/*.spec.ts",
-		"lint": "ng lint"
-	},
-	"private": true,
-	"dependencies": {
-		"@angular/animations": "^16.2.1",
-		"@angular/common": "^16.2.1",
-		"@angular/compiler": "^16.2.1",
-		"@angular/core": "^16.2.1",
-		"@angular/forms": "^16.2.1",
-		"@angular/platform-browser": "^16.2.1",
-		"@angular/platform-browser-dynamic": "^16.2.1",
-		"@angular/router": "^16.2.1",
-		"rxjs": "~7.8.1",
-		"tslib": "^2.5.3",
-		"zone.js": "~0.13.1"
-	},
-	"devDependencies": {
-		"@angular-devkit/build-angular": "^16.2.0",
-		"@angular-eslint/builder": "16.1.0",
-		"@angular-eslint/eslint-plugin": "16.1.0",
-		"@angular-eslint/eslint-plugin-template": "16.1.0",
-		"@angular-eslint/schematics": "16.1.0",
-		"@angular-eslint/template-parser": "16.1.0",
-		"@angular/cli": "~16.2.0",
-		"@angular/compiler-cli": "^16.2.1",
-		"@playwright/test": "^1.37.0",
-		"@types/node": "^20.5.0",
-		"@types/jest": "^29.5.3",
-		"@typescript-eslint/eslint-plugin": "^6.4.0",
-		"@typescript-eslint/parser": "^6.4.0",
-		"eslint": "^8.47.0",
-		"jest": "^29.6.2",
-		"jest-environment-jsdom": "^29.6.2",
-		"prettier": "3.0.2",
-		"typescript": "~5.1.6"
-	}
+  "name": "angular-base",
+  "version": "17.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "pw:run": "URL=http://localhost:4200 npx playwright test",
+    "pw:local": "URL=http://localhost:4200 npx playwright test --ui",
+    "pw:debug": "URL=http://localhost:4200 npx playwright test --debug",
+    "test": "ng test --include src/**/*.spec.ts",
+    "lint": "ng lint"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^17.0.2",
+    "@angular/common": "^17.0.2",
+    "@angular/compiler": "^17.0.2",
+    "@angular/core": "^17.0.2",
+    "@angular/forms": "^17.0.2",
+    "@angular/platform-browser": "^17.0.2",
+    "@angular/platform-browser-dynamic": "^17.0.2",
+    "@angular/router": "^17.0.2",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.5.3",
+    "zone.js": "~0.14.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^17.0.0",
+    "@angular-eslint/builder": "17.0.1",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/schematics": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "^17.0.2",
+    "@playwright/test": "^1.39.0",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
+    "eslint": "^8.53.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "3.0.3",
+    "typescript": "~5.2.2"
+  }
 }
