--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
-        run: npm install --frozen-lockfile && npx playwright install
+        run: npm i && npx playwright install
       - name: Run e2e tests
         run: npm run pw:run
       - name: Build the app
