chore: update Angular dependencies and version to 21.0.0
feat: modify app.component.html to reflect Angular v21 branding

refactor: clean up app.component.ts by removing unused imports

refactor: streamline employee-list.component.ts by removing unused RouterOutlet import

chore: update tsconfig.app.json to remove jest types

chore: update tsconfig.spec.json to use vitest/globals instead of jest

--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
-  "name": "angular-base",
-  "version": "18.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "pw:run": "URL=http://localhost:4200 npx playwright test",
-    "pw:local": "URL=http://localhost:4200 npx playwright test --ui",
-    "pw:debug": "URL=http://localhost:4200 npx playwright test --debug",
-    "test": "ng test --include src/**/*.spec.ts",
-    "lint": "ng lint"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^21.0.3",
-    "@angular/common": "^21.0.3",
-    "@angular/compiler": "^21.0.3",
-    "@angular/core": "^21.0.3",
-    "@angular/forms": "^21.0.3",
-    "@angular/platform-browser": "^21.0.3",
-    "@angular/platform-browser-dynamic": "^21.0.3",
-    "@angular/router": "^21.0.3",
-    "rxjs": "~7.8.1",
-    "tslib": "^2.6.2",
-    "zone.js": "~0.15.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^21.0.2",
-    "@angular-eslint/builder": "17.5.1",
-    "@angular-eslint/eslint-plugin": "17.5.1",
-    "@angular-eslint/eslint-plugin-template": "17.5.1",
-    "@angular-eslint/schematics": "17.5.1",
-    "@angular-eslint/template-parser": "17.5.1",
-    "@angular/cli": "~21.0.2",
-    "@angular/compiler-cli": "^21.0.3",
-    "@playwright/test": "^1.44.1",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "7.10.0",
-    "@typescript-eslint/parser": "7.10.0",
-    "eslint": "^8.53.0",
-    "glob": "latest",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
-    "prettier": "3.2.5",
-    "typescript": "~5.9.3"
-  }
+	"name": "angular-base",
+	"version": "21.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"pw:run": "URL=http://localhost:4200 npx playwright test",
+		"pw:local": "URL=http://localhost:4200 npx playwright test --ui",
+		"pw:debug": "URL=http://localhost:4200 npx playwright test --debug",
+		"test": "ng test --include src/**/*.spec.ts",
+		"lint": "ng lint"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^21.0.3",
+		"@angular/common": "^21.0.3",
+		"@angular/compiler": "^21.0.3",
+		"@angular/core": "^21.0.3",
+		"@angular/forms": "^21.0.3",
+		"@angular/platform-browser": "^21.0.3",
+		"@angular/platform-browser-dynamic": "^21.0.3",
+		"@angular/router": "^21.0.3",
+		"rxjs": "~7.8.1",
+		"tslib": "^2.6.2",
+		"zone.js": "~0.15.0"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^21.0.2",
+		"@angular-eslint/builder": "17.5.1",
+		"@angular-eslint/eslint-plugin": "17.5.1",
+		"@angular-eslint/eslint-plugin-template": "17.5.1",
+		"@angular-eslint/schematics": "17.5.1",
+		"@angular-eslint/template-parser": "17.5.1",
+		"@angular/cli": "~21.0.2",
+		"@angular/compiler-cli": "^21.0.3",
+		"@playwright/test": "^1.44.1",
+		"@types/node": "24.9.2",
+		"@vitest/browser-playwright": "^4.0.10",
+		"@typescript-eslint/eslint-plugin": "7.10.0",
+		"@typescript-eslint/parser": "7.10.0",
+		"eslint": "^8.53.0",
+		"glob": "latest",
+		"jsdom": "^27.2.0",
+		"jest-environment-jsdom": "^30.2.0",
+		"prettier": "3.2.5",
+		"typescript": "~5.9.3",
+    "vitest": "^4.0.15"
+	}
 }
