--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,16 +1,10 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "outDir": "./out-tsc/spec",
-    "types": [
-      "jest"
-    ]
-  },
-  "include": [
-    "src/**/*.spec.ts",
-  ],
-  "exclude": [
-    "playwright"
-  ]
+	"extends": "./tsconfig.json",
+	"compilerOptions": {
+		"outDir": "./out-tsc/spec",
+		"types": ["vitest/globals"]
+	},
+	"include": ["src/**/*.spec.ts"],
+	"exclude": ["playwright"]
 }
