--- a/package.json
+++ b/package.json
@@ -28,24 +28,17 @@
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "^21.0.2",
-		"@angular-eslint/builder": "17.5.1",
-		"@angular-eslint/eslint-plugin": "17.5.1",
-		"@angular-eslint/eslint-plugin-template": "17.5.1",
-		"@angular-eslint/schematics": "17.5.1",
-		"@angular-eslint/template-parser": "17.5.1",
+		"angular-eslint": "21.0.1",
 		"@angular/cli": "~21.0.2",
 		"@angular/compiler-cli": "^21.0.3",
-		"@playwright/test": "^1.44.1",
-		"@types/node": "24.9.2",
-		"@vitest/browser-playwright": "^4.0.10",
-		"@typescript-eslint/eslint-plugin": "7.10.0",
-		"@typescript-eslint/parser": "7.10.0",
-		"eslint": "^8.53.0",
-		"glob": "latest",
+		"@playwright/test": "^1.57.0",
+		"@types/node": "24.10.1",
+		"@vitest/browser-playwright": "^4.0.15",
+		"eslint": "^9.39.1",
 		"jsdom": "^27.2.0",
-		"jest-environment-jsdom": "^30.2.0",
-		"prettier": "3.2.5",
+		"prettier": "3.7.4",
 		"typescript": "~5.9.3",
-    "vitest": "^4.0.15"
+		"typescript-eslint": "8.48.1",
+		"vitest": "^4.0.15"
 	}
 }
